# climatefact

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
climatefact/: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  setup.sh
climatefact/evals/: README.md  evaluation_config.json  run_full_nli_evaluation.py  run_full_retrieval_evaluation.py
climatefact/evals/metrics/: __init__.py  nli_evaluator.py  nli_metrics.py  retrieval_evaluator.py  retrieval_metrics.py
climatefact/evals/reports/: full_pipeline_evaluation_20250630_153548.json  nli_evaluation_comprehensive_20250630_153801.txt  nli_evaluation_results_20250630_153801.json
climatefact/src/climatefact/: app.py  cli.py
climatefact/src/climatefact/workflows/contradiction_detection/: __init__.py  types.py
climatefact/src/climatefact/workflows/contradiction_detection/nodes/: __init__.py  detect_contradictions.py  segment_sentences.py
climatefact/src/climatefact/workflows/contradiction_detection/subgraphs/generation/: __init__.py  types.py
climatefact/src/climatefact/workflows/contradiction_detection/subgraphs/generation/nodes/: __init__.py  generate_report.py
climatefact/src/climatefact/workflows/contradiction_detection/subgraphs/retrieval/: __init__.py  types.py
climatefact/src/climatefact/workflows/contradiction_detection/subgraphs/retrieval/common/: concept_extractor.py  config.py  data_loading.py  embeddings.py
climatefact/src/climatefact/workflows/contradiction_detection/subgraphs/retrieval/nodes/: __init__.py  combine_and_semantic_search.py  deduplicate_results.py  retrieve_by_ner.py  retrieve_by_regex.py  retrieve_by_semantic_search.py
climatefact/tests/: conftest.py  example_usage.py  integration_test.py  test_detect_contradictions.py
concept_extraction/: README.md  config.py  requirements.txt  setup_and_run.sh
concept_extraction/scripts/: build_concept_index.py
data/: concept_index.json  passages.jsonl
data/evaluation/: gold_set.jsonl
data/parsed_to_markdown/: IPCC_AR6_SYR_FullVolume_101.md  IPCC_AR6_SYR_FullVolume_103.md  IPCC_AR6_SYR_FullVolume_104.md  IPCC_AR6_SYR_FullVolume_106.md  IPCC_AR6_SYR_FullVolume_108.md  IPCC_AR6_SYR_FullVolume_109.md  IPCC_AR6_SYR_FullVolume_110.md  IPCC_AR6_SYR_FullVolume_112.md  IPCC_AR6_SYR_FullVolume_115.md  IPCC_AR6_SYR_FullVolume_116.md  IPCC_AR6_SYR_FullVolume_118.md  IPCC_AR6_SYR_FullVolume_119.md  IPCC_AR6_SYR_FullVolume_121.md  IPCC_AR6_SYR_FullVolume_124.md  IPCC_AR6_SYR_FullVolume_126.md  IPCC_AR6_SYR_FullVolume_127.md  IPCC_AR6_SYR_FullVolume_128.md  IPCC_AR6_SYR_FullVolume_129.md  IPCC_AR6_SYR_FullVolume_18.md  IPCC_AR6_SYR_FullVolume_19.md  (+49 more)
paper/: build.sh
pdf_extraction/: README.md  extract_ipcc_ar6_syr_fullvolume.sh  pdf_to_markdown.py  requirements.txt
sentence_extraction/: .env.example  install_apple_silicon.sh  requirements.txt  run_sentences_pipeline.bat  run_sentences_pipeline.sh
(+117 files in other folders)
